# AMS_Projekt

./: CMakeLists.txt  sdkconfig.old
Modtager/: CMakeLists.txt  sdkconfig  sdkconfig.old
Modtager/main/: CMakeLists.txt  Display.cpp  Display.hpp  DisplayTask.cpp  DisplayTask.hpp  Main.cpp  Tasks.cpp  Tasks.hpp  UDPRx.cpp  UDPRx.hpp  WiFiStation.cpp  WiFiStation.hpp  WirelessReceiverTask.cpp  WirelessReceiverTask.hpp  point.h  udp_rx.cpp  udp_rx.hpp
Modtager/main/c_files/: tlv493d_driver.c
Modtager/main/old_files/: Tasks.cpp  Tasks.hpp
Sender/: sdkconfig  sdkconfig.old
Sender/main/: CMakeLists.txt  I2cMaster.cpp  JoystickTask.cpp  JoystickTask.hpp  Tasks.cpp  Tasks.hpp  UDPTx.cpp  UDPTx.hpp  WiFiAP.cpp  WiFiAP.hpp  WirelessTransmitterTask.cpp  WirelessTransmitterTask.hpp  gpio_num.h  i2c_master.cpp  main.cpp  system_parameters.h  tlv493d.cpp  tlv493d.hpp  udp.cpp  udp.hpp  wifi_ap.cpp  wifi_ap.hpp
Sender/main/c_files/: i2c_driver.h
Sender/main/old_files/: Tasks.cpp  Tasks.hpp  i2c_driver.c
main/: CMakeLists.txt  WiFi_Driver.h  hello_world_main.c  i2c_driver.c  i2c_driver.h  i2c_master.hpp  main.cpp  tlv493d_driver.c  tlv493d_driver.h  udp.cpp
main/c_files/: hello_world_main.c  tlv493d_driver.h
