idf_component_register(SRCS "Main.cpp"
                            "I2cMaster.cpp"
                            "Tlv493d.cpp"
                            "UDPTx.cpp"
                            "WiFiAP.cpp"
                            "JoystickTask.cpp"
                            "WirelessTransmitterTask.cpp"
                    INCLUDE_DIRS "")
